# KFC-KFC-Menu-Whisperer-

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  pyproject.toml
scripts/: benchmark_validation.py  debug_chicken_leg.py  init_database.py  test_chicken_leg.py  test_playful.py  test_recall_flow.py  web_server.py
scripts/templates/: index.html
src/food_recall/: __init__.py  config.py  llm.py  logging_config.py  models.py  state.py  workflow.py
src/food_recall/nodes/: __init__.py  recall.py  response.py  timing.py  validation.py
src/food_recall/prompts/: __init__.py
tests/: test_workflow.py
